# OpenDropC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: browser.h  client.h  config.h  server.h
src/: browser.c  cli.c  client.c  config.c  config_private.h  server.c
test/: main.c
